--- a/4.html
+++ b/4.html
@@ -9,6 +9,6 @@
     <p>동아리 활동 중엔 파이썬을 열심히 해보려고 했는데<br>
     html이 해보니까 상당히 괜찮더라구요
     html도 열심히 해볼 생각이긴 한데<br>
-    앞으로는 html말고도 css도 배워보고 싶어요</p>
+    앞으로는 html말고도 css도 배워보고 싶어요 이런거 적는게 맞는건지 모르겠네요</p>
   </body>
 </html>
